--- a/docs/int3face/overview.mdx
+++ b/docs/int3face/overview.mdx
@@ -168,7 +168,7 @@ A threshold signature scheme is a type of cryptographic protocol that enables a 
 
 Several validators, acting as observers, form the signing committee. The purpose of this committee is to represent the vault owner across multiple external chains, eliminating a single point of failure through its distributed nature. Each member of the committee possesses a private share used during the signing process. Along with that, the committee has its public key. The public key is used to verify the signature is the same public key that corresponds to the original signing committee. This public key is known to everyone who needs to verify the signatures and is derived during the initial setup of the scheme.
 
-![tss\_committee](/docs/assets/images/tss_committee-b2314e886d31c8ac3dcbdd97a25cdba7.png)
+![tss\_committee](./docs/assets/images/tss_committee-b2314e886d31c8ac3dcbdd97a25cdba7.png)
 
 ### Pool public key[​](#pool-public-key "Direct link to Pool public key")
 
@@ -176,7 +176,7 @@ In a Threshold Signature Scheme (TSS), generating the public key without any sin
 
 Essentially, the pool public key is a cryptographic public key that can be represented as the address associated with any blockchain that uses public keys as addresses. This ensures that the committee is recognized as the owner of the vault operating across different chains.
 
-![pool\_public\_key](/docs/assets/images/pool_public_key-e5abd67d873da4854053a97588f644a2.png)
+![pool\_public\_key](./docs/assets/images/pool_public_key-e5abd67d873da4854053a97588f644a2.png)
 
 ### Validator rotation[​](#validator-rotation "Direct link to Validator rotation")
 
